--- a/css/style.scss
+++ b/css/style.scss
@@ -63,7 +63,7 @@ a {
 }
 
 .section-lead {
-    font-size: 21px;
+    font-size: 18px;
     color: #404041;
     font-family: 'Open Sans', sans-serif;
 
@@ -314,4 +314,8 @@ a {
         font-size: 21px;
         text-decoration: none;
     }
+}
+
+.nav-tabs {
+    border-bottom: none;
 }
